# error-codegen-users

./: README.md
consumer_workspace/: Cargo.toml
consumer_workspace/consumer/: Cargo.toml  build.rs
consumer_workspace/consumer/resources/: errors.json
consumer_workspace/consumer/src/: lib.rs  main.rs
consumer_workspace/zksync_error/: Cargo.toml
provider1/: Cargo.toml
provider1/resources/: errors.json
provider_root/: Cargo.toml
provider_root/resources/: errors.json
